--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
                 integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-        <!--  <link rel="stylesheet" type="text/css" href="assets/css/style.css">-->
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
@@ -47,18 +47,25 @@
                                 </div>
                                 <div class="row">
                                         <div class="row">
-                                                <div class="col-sm-5">
-                                                                <div class="col-xs-6 col-md-3">
-                                                        <img src="assets/images/Shilpa.jpg" class="thumbnail" alt="My Pic">
+                                                <div class="col-sm-3">
+                                                        <div class="col-xs-6 col-md-3">
+                                                                <img src="assets/images/ShilpaResize.jpg" class="thumbnail"
+                                                                        alt="My Pic">
+                                                        </div>
                                                 </div>
-                                                </div>
-                                                <div class="col-sm-7">
+                                                <div class="col-sm-9">
                                                         <div class="caption">
-                                                                
+
                                                                 <p>
-                                                                 “My name is Shilpa Pawar. I am a software consultant. I am having 11 years of experience in IT Industry. Worked on multiple challenging projects and completed task with critical deadlines. I am aware of full Software Development Life Cycle (SDLC), having experience in developing code in VC++, C, C++,C#.Net etc."
+                                                                        “My name is Shilpa Pawar. I am a software
+                                                                        consultant. I am having 11 years of experience
+                                                                        in IT Industry. Worked on multiple challenging
+                                                                        projects and completed task with critical
+                                                                        deadlines. I am aware of full Software
+                                                                        Development Life Cycle (SDLC), having
+                                                                        experience in developing code in VC++, C,
+                                                                        C++,C#.Net etc."
                                                                 </p>
-                                                                <br>
                                                                 <p>
                                                                         "I have worked as backend developer for
                                                                         building and
@@ -73,15 +80,13 @@
                                                                         to my 5
                                                                         year old kindergartener son 😊."
                                                                 </p>
-                                                                <br>
-                                                                <br>
                                                                 <p>
                                                                         "Playing with my son, Running, listen music and
                                                                         watching favorite TV series is the best
                                                                         stress reliver for me after a long hours of
                                                                         work.""
                                                                 </p>
-                                                                
+
                                                         </div>
                                                 </div>
                                         </div>
@@ -89,6 +94,13 @@
                         </div>
                         <div class="col-sm-2">
                                 New Line
+                        </div>
+                </div>
+                <div class="row">
+                        <div class="col-sm-6">
+                                <div class="footer">
+                                        Copyright &#169;
+                                </div>
                         </div>
                 </div>
         </div>
