New files added index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="mx-auto order-0">
-                        <a class="navbar-brand" href="#">SHILPA PAWAR</a>
+                        <a class="navbar-brand" href="#" id=><h1>SHILPA PAWAR</h1></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                                 <span class="navbar-toggler-icon"></span>
                         </button>
@@ -93,7 +93,7 @@
                                 </div>
                         </div>
                         <div class="col-sm-2">
-                                New Line
+                                
                         </div>
                 </div>
                 <div class="row">
