--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="mx-auto order-0">
-                        <a class="navbar-brand" href="#" id=><h1>SHILPA PAWAR</h1></a>
+                        <a class="navbar-brand" href="#" id=>
+                                        <h1>SHILPA PAWAR</h1>
+                        </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                                 <span class="navbar-toggler-icon"></span>
                         </button>
                 </div>
+                
                 <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                                 <li class="nav-item active">
@@ -40,7 +43,11 @@
         </nav>
         <div class="container">
                 <div class="row">
-                        <div class="col-sm-10">
+                        <br>
+                        <br>
+                </div>
+                <div class="row">
+                        <div class="col-sm-10" style="background-color:#fffF;padding: 25px;">
                                 <div class="page-header">
                                         <h2>About</h2>
                                         <hr>
@@ -53,7 +60,7 @@
                                                                         alt="My Pic">
                                                         </div>
                                                 </div>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-9" style="border: 5px;border-color: crimson;">
                                                         <div class="caption">
 
                                                                 <p>
@@ -93,7 +100,7 @@
                                 </div>
                         </div>
                         <div class="col-sm-2">
-                                
+
                         </div>
                 </div>
                 <div class="row">
