New files added contact

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                                                         alt="My Pic">
                                                         </div>
                                                 </div>
-                                                <div class="col-sm-9" style="border: 5px;border-color: crimson;">
+                                                <div class="col-sm-9" style="border: 5px;border-block-end-width: 5px;">
                                                         <div class="caption">
 
                                                                 <p>
