--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,6 @@
 <!--Contact Details Page for My Portfolio-->
+
+<!--Home Page for My Portfolio-->
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -9,55 +11,87 @@
 
         <!--Adding CSS Style to my portfolio page-->
         <link rel="stylesheet" href="assets/css/Reset.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+                integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="assets/css/StyleContact.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        
+
 </head>
 
 <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="mx-auto order-0">
+                        <a class="navbar-brand" href="#" id=>
+                                <h1>SHILPA PAWAR</h1>
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                                <span class="navbar-toggler-icon"></span>
+                        </button>
+                </div>
 
-        <div class="wrapper">
-                <div class="header">
-                        <h1>Shilpa Pawar</h1>
-                        <ul id="MenuStyle">
-                                <li>
-                                        <a href="contact.html">Contact</a>
+                <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto">
+                                <li class="nav-item active">
+                                        <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li>
-                                        <a href="portfolio.html">Portfolio</a>
+                                <li class="nav-item active">
+                                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                                 </li>
-                                <li>
-                                        <a href="index.html">About</a>
+                                <li class="nav-item active">
+                                        <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
-
                         </ul>
                 </div>
-
-                <section class="contents">
-
-                        <h2>Contact Details</h2>
-                        <hr>
-               
-                <div class="container">
-                        <form action="action_page.php">
-
-                                <label for="fname">Name</label>
-                                <input type="text" id="fname" name="firstname" placeholder="John Smith">
-
-                                <label for="Email">Email</label>
-                                <input type="text" id="lname" name="Email" placeholder="example@gmail.com">
-
-                                <label for="Message">Message</label>
-                                <textarea id="Message" name="Message" placeholder="..." style="height:200px"></textarea>
-
-                                <input type="submit" value="Submit">
-
-                        </form>
+        </nav>
+        <div class="container">
+                <div class="row">
+                        <br>
+                        <br>
                 </div>
-        </section>
-                <div class="footer">
-                        Copyright &#169;
+                <div class="row">
+                        <div class="col-sm-10" style="background-color:#fffF;padding: 25px;">
+                                <div class="page-header">
+                                        <h2>Contact Details</h2>
+                                        <hr>
+                                </div>
+                                <div class="row">
+                                        <div class="row">
+                                                <div class="col-sm" style="border: 5px;border-block-end-width: 5px;">
+                                                        <div class="container">
+                                                                <form action="action_page.php">
+
+                                                                        <label for="fname">Name</label>
+                                                                        <input type="text" id="fname" name="firstname"
+                                                                                placeholder="John Smith">
+
+                                                                        <label for="Email">Email</label>
+                                                                        <input type="text" id="lname" name="Email"
+                                                                                placeholder="example@gmail.com">
+
+                                                                        <label for="Message">Message</label>
+                                                                        <textarea id="Message" name="Message"
+                                                                                placeholder="..." style="height:200px"></textarea>
+
+                                                                        <input type="submit" value="Submit">
+
+                                                                </form>
+                                                        </div>
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="col-sm-2">
+
+                        </div>
                 </div>
+                <div class="row">
+                        <div class="col-sm-6">
+                                <div class="footer">
+                                        Copyright &#169;
+                                </div>
+                        </div>
+                </div>
+        </div>
 </body>
 
 </html>
