New files added contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,114 +1,109 @@
 <!--Portfolio Page for My Portfolio-->
+
+<!--Home Page for My Portfolio-->
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
 
   <meta charset="UTF-8">
-  <title>Portfolio</title>
+  <title>About Me</title>
 
-  <!--Adding BootstrapCDN to my portfolio page-->
-  <!-- <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="sickStyles.css"> -->
+  <!--Adding CSS Style to my portfolio page-->
+  <link rel="stylesheet" href="assets/css/Reset.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
 
-  <head>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!--<link rel="stylesheet" type="text/css" href="assets/css/portfolioStyle.CSS">-->
 
-    <meta charset="UTF-8">
-    <title>About Me</title>
-
-    <!--Adding CSS Style to my portfolio page-->
-    <link rel="stylesheet" href="assets/css/Reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/portfolioStyle.CSS">
-
-  </head>
+</head>
 
 <body>
-
-  <div class="wrapper">
-    <div class="header">
-      <h1>Shilpa Pawar</h1>
-      <ul id="MenuStyle">
-        <li>
-          <a href="contact.html">Contact</a>
+  <!--NAV BAR-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="mx-auto order-0">
+      <a class="navbar-brand" href="#" id=>
+        <h1>SHILPA PAWAR</h1>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
         </li>
-        <li>
-          <a href="portfolio.html">Portfolio</a>
+        <li class="nav-item active">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-        <li>
-          <a href="index.html">About</a>
+        <li class="nav-item active">
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
-
       </ul>
     </div>
-    <section class="contents">
-
-      <h2>Portfolio</h2>
-      <hr>
-
-      <div class="row">
-        <div class="column">
-          <div class="imgcontainer">
-            <img src="assets/images/IMG_8269.JPG" alt="Nature" style="width:45%;height:45%;">
-            <div class="imgtext">
-              <h4>Nature</h4>
+  </nav>
+  <!-- Container For Images and table-->
+  <div class="container">
+    <div class="row">
+      <br>
+      <br>
+    </div>
+    <div class="row">
+      <div class="col-sm-10" style="background-color:#fffF;padding: 25px;">
+        <div class="page-header">
+          <h2>Portfolio</h2>
+          <hr>
+        </div>
+        <div class="row">
+          <div class="row">
+            <div class="col-sm" style="border: 5px;border-block-end-width: 5px;">
+              <!-- Adding Table of Images-->
+              <div class="row">
+                <div class="col-sm-6">
+                  <img src="assets/images/IMG_8269.JPG" class="img-responsive" alt="Nature" style="width:45%;height:45%;">
+                  <h4>Nature</h4>
+                </div>
+                <div class="col-sm-6">
+                  <img src="assets/images/BLUE REFLECTION.jpg" class="img-responsive" alt="Light" style="width:45%;height:45%;">
+                    <h4>Light</h4>          
+              </div>
+            </div>
+         <div class="row">
+                  <div class="col-sm-6">
+                    <img src="assets/images/Dark.JPG" class="img-responsive" alt="Dark" style="width:45%;height:45%;">
+                      <h4>Dark</h4>
+                      </div>
+                    <div class="col-sm-6">
+                        <img src="assets/images/Fun.JPG" class="img-responsive" alt="Fun" style="width:45%;height:45%;">
+                          <h4>Fun</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6">
+                        <img src="assets/images/IMG_5809.JPG" class="img-responsive" alt="Happyness" style="width:45%;height:45%;">
+                        <h4>Happyness</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- End of -->
+              </div>
             </div>
           </div>
-          </div>
-          <div class="column">
-              <div class="imgcontainer">
-                  <img src="assets/images/BLUE REFLECTION.jpg" alt="Light" style="width:45%;height:45%;">
-                  <div class="imgtext">
-                    <h4>Light</h4>
-                  </div>
-                </div>
-          </div>
         </div>
-        <br />
-        <div class="row">
-          <div class="column">
-              <div class="imgcontainer">
-                  <img src="assets/images/Dark.JPG" alt="Dark" style="width:45%;height:45%;">
-                  <div class="imgtext">
-                    <h4>Dark</h4>
-                  </div>
-                </div>
-          </div>
-          <div class="column">
-              <div class="imgcontainer">
-                  <img src="assets/images/Fun.JPG" alt="Fun" style="width:45%;height:45%;">
-                  <div class="imgtext">
-                    <h4>Fun</h4>
-                  </div>
-                </div>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="column">
-              <div class="imgcontainer">
-                  <img src="assets/images/IMG_5809.JPG" alt="Happyness" style="width:45%;height:45%;">
-                  <div class="imgtext">
-                    <h4>Happyness</h4>
-                  </div>
-                </div>
-          </div>
-        </div>
-
-        <!-- The expanding image container -->
-        <div class="container">
-          <!-- Close the image -->
-          <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-
-          <!-- Expanded image -->
-          <img id="expandedImg" style="width:100%">
-
+        <div class="col-sm-2">
 
         </div>
-    </section>
-
-    <div class="footer">
-      Copyright &#169;
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="footer">
+            Copyright &#169;
+          </div>
+        </div>
+      </div>
     </div>
 </body>
 
